route_table.tf
    # Route Table
    resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.wordpress-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "wordpress-rtb"
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.pub1_wordpress.id
  route_table_id = aws_route_table.public_rt.id
}
